# jsonsilo-py

./: LICENSE  README.md  pyproject.toml
src/: jsonsilo.py
