[project]
name = "jsonsilo-py"
version = "0.0.1"
authors = [
  { name="Jairon Landa", email="jaironlanda@gmail.com" },
]
description = "Manage JSON file from jsonsilo.com"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"